src/objects/Loan_Condition_Element__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Element_Value__c</fullName>
        <label>Custom Element Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Element_Type__c</fullName>
        <description>Indicates the Type of Loan Condition Element</description>
        <label>Element Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shared Repair Responsibility</fullName>
                </value>
                <value>
                    <fullName>Policy Type</fullName>
                </value>
                <value>
                    <fullName>Policy Number</fullName>
                </value>
                <value>
                    <fullName>Name of Policy Holder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Element_Value__c</fullName>
        <description>Indicates the specific Element Value for the Loan Condition Element</description>
        <label>Element Value</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Element_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Common wall</fullName>
                </value>
                <value>
                    <fullName>Common roof</fullName>
                </value>
                <value>
                    <fullName>Common road, bridge or other improvements</fullName>
                </value>
                <value>
                    <fullName>Homeowners</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
                <value>
                    <fullName>Sewer Backup</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
                <value>
                    <fullName>Hazard</fullName>
                </value>
                <value>
                    <fullName>Bus Interruption</fullName>
                </value>
                <value>
                    <fullName>Renter Insurance</fullName>
                </value>
                <value>
                    <fullName>Hull</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Element__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;, &quot;Element&quot; ,  Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Element</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Condition__c</fullName>
        <description>Field associates the Loan Condition Element with the parent Loan Condition</description>
        <label>Loan Condition</label>
        <referenceTo>Loan_Condition_Checklist__c</referenceTo>
        <relationshipLabel>Loan Condition Elements</relationshipLabel>
        <relationshipName>Loan_Condition_Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Master_Checklist__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Master List</label>
        <referenceTo>Master_Checklist__c</referenceTo>
        <relationshipLabel>Loan Condition Elements</relationshipLabel>
        <relationshipName>Loan_Condition_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Loan Condition Element</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LC Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Condition Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Pre_Defined_Element_Values</fullName>
        <active>true</active>
        <description>Validation rule ensure no Custom Element values are entered for specific Element Types</description>
        <errorConditionFormula>(ISPICKVAL( Element_Type__c , &quot;Policy Type&quot;) || ISPICKVAL( Element_Type__c, &quot;Shared Repair Responsibility&quot;)) &amp;&amp; NOT(ISBLANK( Custom_Element_Value__c ))</errorConditionFormula>
        <errorDisplayField>Custom_Element_Value__c</errorDisplayField>
        <errorMessage>For this Element Type, you may only enter the pre-defined Element Values</errorMessage>
    </validationRules>
</CustomObject>